insert describe for data analysis

--- a/Building_Energy_Benchmarking.ipynb
+++ b/Building_Energy_Benchmarking.ipynb
@@ -179,6 +179,117 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.describe of       OSEBuildingID  DataYear          BuildingType    PrimaryPropertyType  \\\n",
+       "0                 1      2015        NonResidential                  Hotel   \n",
+       "1                 2      2015        NonResidential                  Hotel   \n",
+       "2                 3      2015        NonResidential                  Hotel   \n",
+       "3                 5      2015        NonResidential                  Hotel   \n",
+       "4                 8      2015        NonResidential                  Hotel   \n",
+       "...             ...       ...                   ...                    ...   \n",
+       "3335          50049      2015  Multifamily LR (1-4)   Low-Rise Multifamily   \n",
+       "3336          50055      2015  Multifamily MR (5-9)   Mid-Rise Multifamily   \n",
+       "3337          50057      2015  Multifamily HR (10+)  High-Rise Multifamily   \n",
+       "3338          50058      2015  Multifamily LR (1-4)   Low-Rise Multifamily   \n",
+       "3339          50059      2015  Multifamily LR (1-4)   Low-Rise Multifamily   \n",
+       "\n",
+       "                    PropertyName TaxParcelIdentificationNumber  \\\n",
+       "0           MAYFLOWER PARK HOTEL                     659000030   \n",
+       "1                PARAMOUNT HOTEL                     659000220   \n",
+       "2                   WESTIN HOTEL                     659000475   \n",
+       "3                      HOTEL MAX                     659000640   \n",
+       "4          WARWICK SEATTLE HOTEL                     659000970   \n",
+       "...                          ...                           ...   \n",
+       "3335  PACIFIC CENTER CONDOMINIUM                    6599950000   \n",
+       "3336          IDENTITY APTS 4123                    1142001670   \n",
+       "3337                      CIRRUS                     660000575   \n",
+       "3338    WEDGEWOOD ESTATES BLDG A                    6392001040   \n",
+       "3339    WEDGEWOOD ESTATES BLDG B                    6392001040   \n",
+       "\n",
+       "                                               Location  CouncilDistrictCode  \\\n",
+       "0     {'latitude': '47.61219025', 'longitude': '-122...                    7   \n",
+       "1     {'latitude': '47.61310583', 'longitude': '-122...                    7   \n",
+       "2     {'latitude': '47.61334897', 'longitude': '-122...                    7   \n",
+       "3     {'latitude': '47.61421585', 'longitude': '-122...                    7   \n",
+       "4     {'latitude': '47.6137544', 'longitude': '-122....                    7   \n",
+       "...                                                 ...                  ...   \n",
+       "3335  {'latitude': '47.59950256', 'longitude': '-122...                    2   \n",
+       "3336  {'latitude': '47.65752471', 'longitude': '-122...                    4   \n",
+       "3337  {'latitude': '47.61649845', 'longitude': '-122...                    7   \n",
+       "3338  {'latitude': '47.68396954', 'longitude': '-122...                    4   \n",
+       "3339  {'latitude': '47.68396954', 'longitude': '-122...                    4   \n",
+       "\n",
+       "     Neighborhood  YearBuilt  ...  GHGEmissionsIntensity(kgCO2e/ft2)  \\\n",
+       "0        DOWNTOWN       1927  ...                               2.64   \n",
+       "1        DOWNTOWN       1996  ...                               2.38   \n",
+       "2        DOWNTOWN       1969  ...                               1.92   \n",
+       "3        DOWNTOWN       1926  ...                              31.38   \n",
+       "4        DOWNTOWN       1980  ...                               4.02   \n",
+       "...           ...        ...  ...                                ...   \n",
+       "3335     DOWNTOWN       2000  ...                               0.07   \n",
+       "3336    NORTHEAST       2014  ...                               0.61   \n",
+       "3337     DOWNTOWN       2015  ...                               1.89   \n",
+       "3338    NORTHEAST       1981  ...                               0.04   \n",
+       "3339    NORTHEAST       1981  ...                               0.05   \n",
+       "\n",
+       "      DefaultData  Comment  ComplianceStatus       Outlier 2010 Census Tracts  \\\n",
+       "0              No      NaN         Compliant           NaN                NaN   \n",
+       "1              No      NaN         Compliant           NaN                NaN   \n",
+       "2             Yes      NaN         Compliant           NaN                NaN   \n",
+       "3              No      NaN         Compliant  High Outlier                NaN   \n",
+       "4              No      NaN         Compliant           NaN                NaN   \n",
+       "...           ...      ...               ...           ...                ...   \n",
+       "3335           No      NaN         Compliant           NaN                NaN   \n",
+       "3336           No      NaN         Compliant           NaN                NaN   \n",
+       "3337           No      NaN         Compliant           NaN                NaN   \n",
+       "3338           No      NaN         Compliant           NaN                NaN   \n",
+       "3339           No      NaN         Compliant           NaN                NaN   \n",
+       "\n",
+       "     Seattle Police Department Micro Community Policing Plan Areas  \\\n",
+       "0                                                  14.0              \n",
+       "1                                                  14.0              \n",
+       "2                                                  56.0              \n",
+       "3                                                  56.0              \n",
+       "4                                                  56.0              \n",
+       "...                                                 ...              \n",
+       "3335                                               26.0              \n",
+       "3336                                               60.0              \n",
+       "3337                                               56.0              \n",
+       "3338                                               55.0              \n",
+       "3339                                               55.0              \n",
+       "\n",
+       "      City Council Districts SPD Beats  Zip Codes  \n",
+       "0                        NaN      31.0      18081  \n",
+       "1                        NaN      31.0      18081  \n",
+       "2                        NaN      31.0      18081  \n",
+       "3                        NaN      31.0      18081  \n",
+       "4                        NaN      31.0      19576  \n",
+       "...                      ...       ...        ...  \n",
+       "3335                     NaN      16.0      18379  \n",
+       "3336                     NaN      38.0      18383  \n",
+       "3337                     NaN       7.0      19576  \n",
+       "3338                     NaN      48.0      18792  \n",
+       "3339                     NaN      48.0      18792  \n",
+       "\n",
+       "[3340 rows x 47 columns]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
